# aktos_take_home

./: .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pylint.yaml  test.yaml
aktos/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
aktos/settings/: common.py  default.py  production.py
collector/: admin.py  filter_backend.py  models.py  serializers.py  urls.py  utils.py  viewsets.py
collector/fixtures/test/: test_balances.csv  test_consumer.json
collector/management/commands/: load_consumers.py
collector/migrations/: 0001_initial.py
collector/tests/: test_commands.py  test_models.py  test_views.py
deployments/nginx/: nginx.conf
